[package]
name = "alcoholic_jwt"
version = "1.0.1"
authors = ["Vincent Ambo <vincent@aprila.no>"]
description = "Library for validation of RS256 JWTs"
keywords = ["jwt", "token", "jwks"]
categories = ["authentication"]
license = "GPL-3.0-or-later"
repository = "https://github.com/aprilabank/alcoholic_jwt"
[dependencies.base64]
version = "0.10"

[dependencies.openssl]
version = "0.10"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.serde_json]
version = "1.0"